[tool.poetry]
name = "navigator"
version = "0.0.0"
description = "Navigator"
authors = [
    "Raul Victor Trombin <raulvtrombin@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0.1"
Sphinx= "^6.2.1"
sphinx-rtd-theme="^1.2.2"
sphinxcontrib-napoleon="^0.7"
sphinx-pyproject = "^0.1.0"

[tool.sphinx-pyproject]
project = "navigator"
release = "0.0.0"  # Replace this with the actual version, for example, "1.2.3"
version = "0.0.0"  # Same as release for this case
source-dir = "docs"
build-dir = "docs/_build"

extensions = [
    'sphinx.ext.autodoc',
    'sphinx.ext.autosummary',
    'sphinx.ext.intersphinx',
    'sphinx.ext.todo',
    'sphinx.ext.inheritance_diagram',
    'sphinx.ext.autosectionlabel',
    'sphinx.ext.napoleon',
    'sphinx_rtd_theme',
]

autosummary_generate = true
autosummary_imported_members = true

templates_path = ['_templates']
exclude_patterns = []

html_theme = 'sphinx_rtd_theme'
html_static_path = ['_static']
html_logo = "https://upload.wikimedia.org/wikipedia/commons/1/12/Bluerobotics-logo.svg"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "navigator"
version = "0.0.0"
description = "Navigator"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[[project.authors]]
name = "Raul Victor Trombin"
email = "raulvtrombin@gmail.com"

[tool.maturin]
features = ["python"]
